overflow content fix

--- a/audio_server/static/css/main.css
+++ b/audio_server/static/css/main.css
@@ -363,7 +363,7 @@ form input[type="email"]:focus {
   text-align: center;
   vertical-align: middle;
   line-height: 45px;
-  font-size: 30px;
+  font-size: 26px;
 }
 
 .cellText{
